syntax = "proto3";
package sifnode.clp.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/Sifchain/sifnode/x/clp/types";

import "sifnode/clp/v1/params.proto";
import "sifnode/clp/v1/types.proto";
import "sifnode/clp/v1/rewards_bucket.proto";

// GenesisState - all clp state that must be provided at genesis
message GenesisState {
  sifnode.clp.v1.Params params = 1 [ (gogoproto.nullable) = false ];
  repeated string address_whitelist = 2;
  repeated sifnode.clp.v1.Pool pool_list = 3;
  repeated sifnode.clp.v1.LiquidityProvider liquidity_providers = 4;
  repeated RewardsBucket rewards_bucket_list = 5 [(gogoproto.nullable) = false];
  sifnode.clp.v1.RewardParams reward_params = 6 [ (gogoproto.nullable) = false ];
  sifnode.clp.v1.PmtpParams pmtp_params = 7 [ (gogoproto.nullable) = false ];
  sifnode.clp.v1.PmtpEpoch pmtp_epoch = 8 [ (gogoproto.nullable) = false ];
  sifnode.clp.v1.PmtpRateParams pmtp_rate_params = 9 [ (gogoproto.nullable) = false ];
  sifnode.clp.v1.LiquidityProtectionParams liquidity_protection_params = 10 [ (gogoproto.nullable) = false ];
  sifnode.clp.v1.LiquidityProtectionRateParams liquidity_protection_rate_params = 11 [ (gogoproto.nullable) = false ];
  sifnode.clp.v1.SwapFeeParams swap_fee_params = 12 [ (gogoproto.nullable) = false ];
  sifnode.clp.v1.ProviderDistributionParams provider_distribution_params = 13 [ (gogoproto.nullable) = false ];
}
